test with only dependency added